# chord-parser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  TAB_PARSING.md  TODO.md  pyproject.toml
chord_parser/: __init__.py  converter.py  models.py  pitch_class.py
chord_parser/alignment/: __init__.py  aligner.py  api.py  chordino.py  essentia_extractor.py  evaluation.py  extractor.py  madmom_extractor.py  models.py  multimodal.py  smams.py  vocal_anchors.py
chord_parser/decibel/: __init__.py  adapter.py  alignment.py  features.py  training.py
chord_parser/tab_parser/: __init__.py  attachment.py  chord_detector.py  models.py  parser.py  tokenizer.py
docs/: harte-library.md  pychord.md
examples/: align_upside_down.py  alignment_viewer.py  compare_chord_detectors.py  parse_tab.py  simple.py  smams_alignment_viewer.py
scripts/: eval_billboard.py  fetch_freetar_chords.py  generate_chord_catalogue.py  train_billboard.py
testdata/: 1285.json  1285_chordino.json  chord_catalogue_core.json  diana-ross-upside-down.md  intro_chords_only.txt  multiple_sections.txt  simple_pair.txt  upside_down.txt
tests/: test_alignment.py  test_chord_catalogue.py  test_converter.py  test_tab_chord_detector.py  test_tab_parser.py  test_tab_tokenizer.py  test_testdata.py
