[project]
name = "chord-parser"
version = "0.1.0"
description = "A chord parser for converting and parsing chords of various formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["harte-library>=0.4.5", "pychord>=1.2.2"]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "deptry>=0.24.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]


[tool.ruff]
line-length = 120
exclude = ["pyproject.toml"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"


[tool.ruff.lint]
select = [
    "D",    # docstring conventions
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "C901", # mccabe complexity
    "N",    # pep8-naming
    "RET",  # flake8-return
    "TRY",  # tryceratops (exception handling)
    "PERF", # perflint
    "RUF",  # ruff-specific rules
    "ERA",  # eradicate (commented-out code)
    "T20",  # flake8-print
    "PLR",  # pylint refactor
]
ignore = ["D100", "D400", "D104", "D200", "D401", "D205"] # optional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chord_parser"]
